1.7.1:
* Client: WebUI/MakeTX - fixed sorting of outputs by block height
* Client: records in balance/unsepnt.txt (inside balance.zip) are sorted by block height
* Client: New TextUI command "unspent"
* Client: P2SH and P2KH balance indexes are kept in separate maps
* Client: support for BIP 133 ("feefilter" messages)
* Client: responds at most once to a getaddr request during the lifetime of a connection
* Client: expire peer's GetBlockInProgress after one hour
* WebUI: new buttons "Move left" & "Move right" in "Wallet" tab, for sorting order of the wallets

1.7.0 - 2016-07-24
* AllBalances mode - enabled by config value AllBalances
* WebUI: Import / export wallets form/to a JSON file
* Switched off support for stealth addresses
* Client: do not try to commit a block until all off its parents are done - added HasAllParents() method
* Client: CommitBlock() returns error, discard all the blocks that depend on it - added network.DiscardedBlocks
* Wallet: "-p2sh <hex>" command can be used with "-input <int>" to alter only a single input of the transaction
* WebUI: Option to show averaged value of the blocks' sizes, tx counts, SPBs

1.6.4 - 2016-06-27
* Use trully volatile, quickly switachable wallets from WebUI (requires 1.5GB more RAM)
* Changed the first parameter to NotifyTxDel() to be more descriptive (than just TxID)
* Do not use VER_LOW_S for now (to verify mempool txs) as it is baning some peers
* Enforce CVS verification for blocks height 417312 or higher (not for testnet)
* Implemented BIP113 (Median time-past as endpoint for lock-time calculations)
* New TextUI command "bip9" - extracts BIP9 relevant info from the current chain

1.6.3 - 2016-05-28
* Lib: Inteface to TheBlueMatt's block_validator tests - see https://github.com/piotrnar/btc_block_validator
* WebUI/Miners: Removed BIP100 voting stats
* WebUI/Miners: Block version numbers are shown in a table, from a span of the consensus window