@@ -1,4 +1,5 @@
 1.7.1:
+* Client: WebUI - "balance.json" support "summary" (to not include list of unspent outputs)
 * Client: WebUI/MakeTX - fixed sorting of outputs by block height
 * Client: records in balance/unsepnt.txt (inside balance.zip) are sorted by block height
 * Client: New TextUI command "unspent"
